[package]
name = "senpa"
version = "0.1.0"
edition = "2021"
description="A library to parse OPNsense firewall logs"
license="MIT"
[dependencies]
nom = "7.1.3"
serde = { version = "1.0.217", features = ["serde_derive"], optional = true }


[lib]
name = "senpa"
path = "src/lib.rs"

[features]
serde=["dep:serde"]